overlays/uksouth-ait/configuration/europa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: europa
  namespace: configuration
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: configuration.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /config_service
            pathType: Prefix
            backend:
              service:
                name: europa-api
                port:
                  number: 80
  tls:
    - hosts:
        - configuration.${cluster_name}.${cluster_location}.bink.sh
